# sql-pandas

./: poetry-debugging.sh  pyproject.toml
data/: load.sql  schema.sql
src/: create-table.py  main.ipynb
