[tool.poetry]
name = "sql-pandas"
version = "0.1.0"
description = "Following along sql-pandas tutorial (https://hakibenita.com/sql-for-data-analysis#pandas-and-sql-better-together) using DuckDB"
authors = ["Macarena Piaggio <macarena.piaggio@muttdata.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.0.0"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"